[project]
name = "minergym"
version = "0.1.1"
description = "A thin translation layer from energyplus to gymnasium"
authors = [
    {name = "Justin Veilleux", email = "justi.veilleux@mila.quebec"}
]
license = {text = "MIT"}
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.0.0",
    "gymnasium>=0.29.0",
    "optree>=0.16.0",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

# How to express dependency on pyenergyplus since it is not on pypi?
# pyenergyplus = { version = "*", allow-prereleases = true }

